parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN
    LBRACKET
    NEWLINE
    PERIOD
    COMMENTS
    RBRACKET

Grammar

Rule 0     S' -> list
Rule 1     list -> empty
Rule 2     list -> list asgn
Rule 3     list -> list stmt
Rule 4     asgn -> ID = expr
Rule 5     asgn -> ID ADDEQ expr
Rule 6     asgn -> ID SUBEQ expr
Rule 7     asgn -> ID MULEQ expr
Rule 8     asgn -> ID DIVEQ expr
Rule 9     asgn -> ID MODEQ expr
Rule 10    stmt -> expr
Rule 11    stmt -> return ( expr )
Rule 12    stmt -> procedure begin ( arglist )
Rule 13    stmt -> print prlist
Rule 14    stmt -> while ( cond ) stmt end
Rule 15    stmt -> for ( cond ; cond ; cond ) stmt end
Rule 16    stmt -> if ( cond ) stmt end
Rule 17    stmt -> if ( cond ) stmt end ELSE stmt end
Rule 18    stmt -> { stmtlist }
Rule 19    cond -> expr
Rule 20    begin -> <empty>
Rule 21    end -> <empty>
Rule 22    stmtlist -> empty
Rule 23    stmtlist -> stmtlist stmt
Rule 24    expr -> ID
Rule 25    term -> read ( ID )
Rule 26    expr -> BLTIN ( expr )
Rule 27    expr -> asgn
Rule 28    expr -> expr + expr
Rule 29    expr -> expr - expr
Rule 30    expr -> expr * expr
Rule 31    expr -> expr / expr
Rule 32    expr -> NUMBER
Rule 33    expr -> expr EXPONENT expr
Rule 34    expr -> term
Rule 35    term -> factor
Rule 36    factor -> ( expr )
Rule 37    expr -> expr % expr
Rule 38    expr -> expr OR expr
Rule 39    expr -> expr AND expr
Rule 40    expr -> NOT expr
Rule 41    expr -> expr LT expr
Rule 42    expr -> expr GT expr
Rule 43    expr -> expr LE expr
Rule 44    expr -> expr GE expr
Rule 45    expr -> expr EQ expr
Rule 46    expr -> expr NE expr
Rule 47    expr -> INC ID
Rule 48    expr -> DEC ID
Rule 49    expr -> ID DEC
Rule 50    expr -> ID INC
Rule 51    prlist -> STRING
Rule 52    prlist -> prlist , expr
Rule 53    prlist -> prlist , STRING
Rule 54    defn -> func procname ( arglist ) stmt
Rule 55    defn -> proc procname ( arglist ) stmt
Rule 56    procname -> function
Rule 57    procname -> procedure
Rule 58    arglist -> empty
Rule 59    arglist -> arglist , expr
Rule 60    arglist -> expr
Rule 61    empty -> <empty>
Rule 62    else -> ELSE
Rule 63    return -> RETURN

Terminals, with rules where they appear

%                    : 37
(                    : 11 12 14 15 16 17 25 26 36 54 55
)                    : 11 12 14 15 16 17 25 26 36 54 55
*                    : 30
+                    : 28
,                    : 52 53 59
-                    : 29
/                    : 31
;                    : 15 15
=                    : 4
ADDEQ                : 5
AND                  : 39
BLTIN                : 26
COMMENTS             : 
DEC                  : 48 49
DIVEQ                : 8
ELSE                 : 17 62
EQ                   : 45
EXPONENT             : 33
GE                   : 44
GT                   : 42
ID                   : 4 5 6 7 8 9 24 25 47 48 49 50
INC                  : 47 50
LBRACKET             : 
LE                   : 43
LT                   : 41
MODEQ                : 9
MULEQ                : 7
NE                   : 46
NEWLINE              : 
NOT                  : 40
NUMBER               : 32
OR                   : 38
PERIOD               : 
RBRACKET             : 
RETURN               : 63
STRING               : 51 53
SUBEQ                : 6
THEN                 : 
error                : 
for                  : 15
func                 : 54
function             : 56
if                   : 16 17
print                : 13
proc                 : 55
procedure            : 12 57
read                 : 25
while                : 14
{                    : 18
}                    : 18

Nonterminals, with rules where they appear

arglist              : 12 54 55 59
asgn                 : 2 27
begin                : 12
cond                 : 14 15 15 15 16 17
defn                 : 
else                 : 
empty                : 1 22 58
end                  : 14 15 16 17 17
expr                 : 4 5 6 7 8 9 10 11 19 26 28 28 29 29 30 30 31 31 33 33 36 37 37 38 38 39 39 40 41 41 42 42 43 43 44 44 45 45 46 46 52 59 60
factor               : 35
list                 : 2 3 0
prlist               : 13 52 53
procname             : 54 55
return               : 11
stmt                 : 3 14 15 16 17 17 23 54 55
stmtlist             : 18 23
term                 : 34

Parsing method: LALR

state 0

    (0) S' -> . list
    (1) list -> . empty
    (2) list -> . list asgn
    (3) list -> . list stmt
    (61) empty -> .

    ID              reduce using rule 61 (empty -> .)
    procedure       reduce using rule 61 (empty -> .)
    print           reduce using rule 61 (empty -> .)
    while           reduce using rule 61 (empty -> .)
    for             reduce using rule 61 (empty -> .)
    if              reduce using rule 61 (empty -> .)
    {               reduce using rule 61 (empty -> .)
    BLTIN           reduce using rule 61 (empty -> .)
    NUMBER          reduce using rule 61 (empty -> .)
    NOT             reduce using rule 61 (empty -> .)
    INC             reduce using rule 61 (empty -> .)
    DEC             reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    read            reduce using rule 61 (empty -> .)
    (               reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)

    list                           shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> list .
    (2) list -> list . asgn
    (3) list -> list . stmt
    (4) asgn -> . ID = expr
    (5) asgn -> . ID ADDEQ expr
    (6) asgn -> . ID SUBEQ expr
    (7) asgn -> . ID MULEQ expr
    (8) asgn -> . ID DIVEQ expr
    (9) asgn -> . ID MODEQ expr
    (10) stmt -> . expr
    (11) stmt -> . return ( expr )
    (12) stmt -> . procedure begin ( arglist )
    (13) stmt -> . print prlist
    (14) stmt -> . while ( cond ) stmt end
    (15) stmt -> . for ( cond ; cond ; cond ) stmt end
    (16) stmt -> . if ( cond ) stmt end
    (17) stmt -> . if ( cond ) stmt end ELSE stmt end
    (18) stmt -> . { stmtlist }
    (24) expr -> . ID
    (26) expr -> . BLTIN ( expr )
    (27) expr -> . asgn
    (28) expr -> . expr + expr
    (29) expr -> . expr - expr
    (30) expr -> . expr * expr
    (31) expr -> . expr / expr
    (32) expr -> . NUMBER
    (33) expr -> . expr EXPONENT expr
    (34) expr -> . term
    (37) expr -> . expr % expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . NOT expr
    (41) expr -> . expr LT expr
    (42) expr -> . expr GT expr
    (43) expr -> . expr LE expr
    (44) expr -> . expr GE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NE expr
    (47) expr -> . INC ID
    (48) expr -> . DEC ID
    (49) expr -> . ID DEC
    (50) expr -> . ID INC
    (63) return -> . RETURN
    (25) term -> . read ( ID )
    (35) term -> . factor
    (36) factor -> . ( expr )

    ID              shift and go to state 15
    procedure       shift and go to state 22
    print           shift and go to state 10
    while           shift and go to state 19
    for             shift and go to state 6
    if              shift and go to state 5
    {               shift and go to state 21
    BLTIN           shift and go to state 14
    NUMBER          shift and go to state 4
    NOT             shift and go to state 20
    INC             shift and go to state 23
    DEC             shift and go to state 17
    RETURN          shift and go to state 3
    read            shift and go to state 12
    (               shift and go to state 7

    return                         shift and go to state 11
    expr                           shift and go to state 18
    term                           shift and go to state 16
    stmt                           shift and go to state 13
    asgn                           shift and go to state 8
    factor                         shift and go to state 9

state 2

    (1) list -> empty .

    ID              reduce using rule 1 (list -> empty .)
    procedure       reduce using rule 1 (list -> empty .)
    print           reduce using rule 1 (list -> empty .)
    while           reduce using rule 1 (list -> empty .)
    for             reduce using rule 1 (list -> empty .)
    if              reduce using rule 1 (list -> empty .)
    {               reduce using rule 1 (list -> empty .)
    BLTIN           reduce using rule 1 (list -> empty .)
    NUMBER          reduce using rule 1 (list -> empty .)
    NOT             reduce using rule 1 (list -> empty .)
    INC             reduce using rule 1 (list -> empty .)
    DEC             reduce using rule 1 (list -> empty .)
    RETURN          reduce using rule 1 (list -> empty .)
    read            reduce using rule 1 (list -> empty .)
    (               reduce using rule 1 (list -> empty .)
    $end            reduce using rule 1 (list -> empty .)


state 3

    (63) return -> RETURN .

    (               reduce using rule 63 (return -> RETURN .)


state 4

    (32) expr -> NUMBER .

    +               reduce using rule 32 (expr -> NUMBER .)
    -               reduce using rule 32 (expr -> NUMBER .)
    *               reduce using rule 32 (expr -> NUMBER .)
    /               reduce using rule 32 (expr -> NUMBER .)
    EXPONENT        reduce using rule 32 (expr -> NUMBER .)
    %               reduce using rule 32 (expr -> NUMBER .)
    OR              reduce using rule 32 (expr -> NUMBER .)
    AND             reduce using rule 32 (expr -> NUMBER .)
    LT              reduce using rule 32 (expr -> NUMBER .)
    GT              reduce using rule 32 (expr -> NUMBER .)
    LE              reduce using rule 32 (expr -> NUMBER .)
    GE              reduce using rule 32 (expr -> NUMBER .)
    EQ              reduce using rule 32 (expr -> NUMBER .)
    NE              reduce using rule 32 (expr -> NUMBER .)
    ID              reduce using rule 32 (expr -> NUMBER .)
    procedure       reduce using rule 32 (expr -> NUMBER .)
    print           reduce using rule 32 (expr -> NUMBER .)
    while           reduce using rule 32 (expr -> NUMBER .)
    for             reduce using rule 32 (expr -> NUMBER .)
    if              reduce using rule 32 (expr -> NUMBER .)
    {               reduce using rule 32 (expr -> NUMBER .)
    BLTIN           reduce using rule 32 (expr -> NUMBER .)
    NUMBER          reduce using rule 32 (expr -> NUMBER .)
    NOT             reduce using rule 32 (expr -> NUMBER .)
    INC             reduce using rule 32 (expr -> NUMBER .)
    DEC             reduce using rule 32 (expr -> NUMBER .)
    RETURN          reduce using rule 32 (expr -> NUMBER .)
    read            reduce using rule 32 (expr -> NUMBER .)
    (               reduce using rule 32 (expr -> NUMBER .)
    $end            reduce using rule 32 (expr -> NUMBER .)
    )               reduce using rule 32 (expr -> NUMBER .)
    ;               reduce using rule 32 (expr -> NUMBER .)
    }               reduce using rule 32 (expr -> NUMBER .)
    ,               reduce using rule 32 (expr -> NUMBER .)
    ELSE            reduce using rule 32 (expr -> NUMBER .)


state 5

    (16) stmt -> if . ( cond ) stmt end
    (17) stmt -> if . ( cond ) stmt end ELSE stmt end

    (               shift and go to state 24


state 6

    (15) stmt -> for . ( cond ; cond ; cond ) stmt end

    (               shift and go to state 25


state 7

    (36) factor -> ( . expr )
    (24) expr -> . ID
    (26) expr -> . BLTIN ( expr )
    (27) expr -> . asgn
    (28) expr -> . expr + expr
    (29) expr -> . expr - expr
    (30) expr -> . expr * expr
    (31) expr -> . expr / expr
    (32) expr -> . NUMBER
    (33) expr -> . expr EXPONENT expr
    (34) expr -> . term
    (37) expr -> . expr % expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . NOT expr
    (41) expr -> . expr LT expr
    (42) expr -> . expr GT expr
    (43) expr -> . expr LE expr
    (44) expr -> . expr GE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NE expr
    (47) expr -> . INC ID
    (48) expr -> . DEC ID
    (49) expr -> . ID DEC
    (50) expr -> . ID INC
    (4) asgn -> . ID = expr
    (5) asgn -> . ID ADDEQ expr
    (6) asgn -> . ID SUBEQ expr
    (7) asgn -> . ID MULEQ expr
    (8) asgn -> . ID DIVEQ expr
    (9) asgn -> . ID MODEQ expr
    (25) term -> . read ( ID )
    (35) term -> . factor
    (36) factor -> . ( expr )

    ID              shift and go to state 27
    BLTIN           shift and go to state 14
    NUMBER          shift and go to state 4
    NOT             shift and go to state 20
    INC             shift and go to state 23
    DEC             shift and go to state 17
    read            shift and go to state 12
    (               shift and go to state 7

    expr                           shift and go to state 28
    term                           shift and go to state 16
    factor                         shift and go to state 9
    asgn                           shift and go to state 26

state 8

    (2) list -> list asgn .
    (27) expr -> asgn .

  ! reduce/reduce conflict for ID resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for procedure resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for print resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for while resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for for resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for if resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for { resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for BLTIN resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for NUMBER resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for NOT resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for INC resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for DEC resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for RETURN resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for read resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for ( resolved using rule 2 (list -> list asgn .)
  ! reduce/reduce conflict for $end resolved using rule 2 (list -> list asgn .)
    ID              reduce using rule 2 (list -> list asgn .)
    procedure       reduce using rule 2 (list -> list asgn .)
    print           reduce using rule 2 (list -> list asgn .)
    while           reduce using rule 2 (list -> list asgn .)
    for             reduce using rule 2 (list -> list asgn .)
    if              reduce using rule 2 (list -> list asgn .)
    {               reduce using rule 2 (list -> list asgn .)
    BLTIN           reduce using rule 2 (list -> list asgn .)
    NUMBER          reduce using rule 2 (list -> list asgn .)
    NOT             reduce using rule 2 (list -> list asgn .)
    INC             reduce using rule 2 (list -> list asgn .)
    DEC             reduce using rule 2 (list -> list asgn .)
    RETURN          reduce using rule 2 (list -> list asgn .)
    read            reduce using rule 2 (list -> list asgn .)
    (               reduce using rule 2 (list -> list asgn .)
    $end            reduce using rule 2 (list -> list asgn .)
    +               reduce using rule 27 (expr -> asgn .)
    -               reduce using rule 27 (expr -> asgn .)
    *               reduce using rule 27 (expr -> asgn .)
    /               reduce using rule 27 (expr -> asgn .)
    EXPONENT        reduce using rule 27 (expr -> asgn .)
    %               reduce using rule 27 (expr -> asgn .)
    OR              reduce using rule 27 (expr -> asgn .)
    AND             reduce using rule 27 (expr -> asgn .)
    LT              reduce using rule 27 (expr -> asgn .)
    GT              reduce using rule 27 (expr -> asgn .)
    LE              reduce using rule 27 (expr -> asgn .)
    GE              reduce using rule 27 (expr -> asgn .)
    EQ              reduce using rule 27 (expr -> asgn .)
    NE              reduce using rule 27 (expr -> asgn .)

  ! ID              [ reduce using rule 27 (expr -> asgn .) ]
  ! procedure       [ reduce using rule 27 (expr -> asgn .) ]
  ! print           [ reduce using rule 27 (expr -> asgn .) ]
  ! while           [ reduce using rule 27 (expr -> asgn .) ]
  ! for             [ reduce using rule 27 (expr -> asgn .) ]
  ! if              [ reduce using rule 27 (expr -> asgn .) ]
  ! {               [ reduce using rule 27 (expr -> asgn .) ]
  ! BLTIN           [ reduce using rule 27 (expr -> asgn .) ]
  ! NUMBER          [ reduce using rule 27 (expr -> asgn .) ]
  ! NOT             [ reduce using rule 27 (expr -> asgn .) ]
  ! INC             [ reduce using rule 27 (expr -> asgn .) ]
  ! DEC             [ reduce using rule 27 (expr -> asgn .) ]
  ! RETURN          [ reduce using rule 27 (expr -> asgn .) ]
  ! read            [ reduce using rule 27 (expr -> asgn .) ]
  ! (               [ reduce using rule 27 (expr -> asgn .) ]
  ! $end            [ reduce using rule 27 (expr -> asgn .) ]


state 9

    (35) term -> factor .

    +               reduce using rule 35 (term -> factor .)
    -               reduce using rule 35 (term -> factor .)
    *               reduce using rule 35 (term -> factor .)
    /               reduce using rule 35 (term -> factor .)
    EXPONENT        reduce using rule 35 (term -> factor .)
    %               reduce using rule 35 (term -> factor .)
    OR              reduce using rule 35 (term -> factor .)
    AND             reduce using rule 35 (term -> factor .)
    LT              reduce using rule 35 (term -> factor .)
    GT              reduce using rule 35 (term -> factor .)
    LE              reduce using rule 35 (term -> factor .)
    GE              reduce using rule 35 (term -> factor .)
    EQ              reduce using rule 35 (term -> factor .)
    NE              reduce using rule 35 (term -> factor .)
    ID              reduce using rule 35 (term -> factor .)
    procedure       reduce using rule 35 (term -> factor .)
    print           reduce using rule 35 (term -> factor .)
    while           reduce using rule 35 (term -> factor .)
    for             reduce using rule 35 (term -> factor .)
    if              reduce using rule 35 (term -> factor .)
    {               reduce using rule 35 (term -> factor .)
    BLTIN           reduce using rule 35 (term -> factor .)
    NUMBER          reduce using rule 35 (term -> factor .)
    NOT             reduce using rule 35 (term -> factor .)
    INC             reduce using rule 35 (term -> factor .)
    DEC             reduce using rule 35 (term -> factor .)
    RETURN          reduce using rule 35 (term -> factor .)
    read            reduce using rule 35 (term -> factor .)
    (               reduce using rule 35 (term -> factor .)
    $end            reduce using rule 35 (term -> factor .)
    )               reduce using rule 35 (term -> factor .)
    ;               reduce using rule 35 (term -> factor .)
    }               reduce using rule 35 (term -> factor .)
    ,               reduce using rule 35 (term -> factor .)
    ELSE            reduce using rule 35 (term -> factor .)


state 10

    (13) stmt -> print . prlist
    (51) prlist -> . STRING
    (52) prlist -> . prlist , expr
    (53) prlist -> . prlist , STRING

    STRING          shift and go to state 30

    prlist                         shift and go to state 29

state 11

    (11) stmt -> return . ( expr )

    (               shift and go to state 31


state 12

    (25) term -> read . ( ID )

    (               shift and go to state 32


state 13

    (3) list -> list stmt .

    ID              reduce using rule 3 (list -> list stmt .)
    procedure       reduce using rule 3 (list -> list stmt .)
    print           reduce using rule 3 (list -> list stmt .)
    while           reduce using rule 3 (list -> list stmt .)
    for             reduce using rule 3 (list -> list stmt .)
    if              reduce using rule 3 (list -> list stmt .)
    {               reduce using rule 3 (list -> list stmt .)
    BLTIN           reduce using rule 3 (list -> list stmt .)
    NUMBER          reduce using rule 3 (list -> list stmt .)
    NOT             reduce using rule 3 (list -> list stmt .)
    INC             reduce using rule 3 (list -> list stmt .)
    DEC             reduce using rule 3 (list -> list stmt .)
    RETURN          reduce using rule 3 (list -> list stmt .)
    read            reduce using rule 3 (list -> list stmt .)
    (               reduce using rule 3 (list -> list stmt .)
    $end            reduce using rule 3 (list -> list stmt .)


state 14

    (26) expr -> BLTIN . ( expr )

    (               shift and go to state 33


state 15

    (4) asgn -> ID . = expr
    (5) asgn -> ID . ADDEQ expr
    (6) asgn -> ID . SUBEQ expr
    (7) asgn -> ID . MULEQ expr
    (8) asgn -> ID . DIVEQ expr
    (9) asgn -> ID . MODEQ expr
    (24) expr -> ID .
    (49) expr -> ID . DEC
    (50) expr -> ID . INC

  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INC resolved as shift
    =               shift and go to state 39
    ADDEQ           shift and go to state 37
    SUBEQ           shift and go to state 35
    MULEQ           shift and go to state 36
    DIVEQ           shift and go to state 40
    MODEQ           shift and go to state 34
    +               reduce using rule 24 (expr -> ID .)
    -               reduce using rule 24 (expr -> ID .)
    *               reduce using rule 24 (expr -> ID .)
    /               reduce using rule 24 (expr -> ID .)
    EXPONENT        reduce using rule 24 (expr -> ID .)
    %               reduce using rule 24 (expr -> ID .)
    OR              reduce using rule 24 (expr -> ID .)
    AND             reduce using rule 24 (expr -> ID .)
    LT              reduce using rule 24 (expr -> ID .)
    GT              reduce using rule 24 (expr -> ID .)
    LE              reduce using rule 24 (expr -> ID .)
    GE              reduce using rule 24 (expr -> ID .)
    EQ              reduce using rule 24 (expr -> ID .)
    NE              reduce using rule 24 (expr -> ID .)
    ID              reduce using rule 24 (expr -> ID .)
    procedure       reduce using rule 24 (expr -> ID .)
    print           reduce using rule 24 (expr -> ID .)
    while           reduce using rule 24 (expr -> ID .)
    for             reduce using rule 24 (expr -> ID .)
    if              reduce using rule 24 (expr -> ID .)
    {               reduce using rule 24 (expr -> ID .)
    BLTIN           reduce using rule 24 (expr -> ID .)
    NUMBER          reduce using rule 24 (expr -> ID .)
    NOT             reduce using rule 24 (expr -> ID .)
    RETURN          reduce using rule 24 (expr -> ID .)
    read            reduce using rule 24 (expr -> ID .)
    (               reduce using rule 24 (expr -> ID .)
    $end            reduce using rule 24 (expr -> ID .)
    DEC             shift and go to state 38
    INC             shift and go to state 41

  ! INC             [ reduce using rule 24 (expr -> ID .) ]
  ! DEC             [ reduce using rule 24 (expr -> ID .) ]


state 16

    (34) expr -> term .
